--- a/css/style.css
+++ b/css/style.css
@@ -168,7 +168,7 @@ a:hover {
   box-shadow: 0 4px 12px rgba(0,0,0,0.1);
 
   opacity: 0;
-  transform: translateY(-30px); /* 👈 starter litt over */
+  transform: translateY(-30px); /* starter litt over */
   transition: opacity 0.4s ease, transform 0.4s ease;
 }
 
